<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number|numberSigned"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="0"
        android:imeOptions="actionDone"
        android:inputType="number|numberSigned"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:text="0" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="0"
        android:imeOptions="actionDone"
        android:inputType="number|numberSigned"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:text="0" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="0"
        android:imeOptions="actionDone"
        android:inputType="number|numberSigned"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:text="0" />


    <TextView
        android:id="@+id/text5"
        android:layout_width="12dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/text5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="12dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/text4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="12dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/text3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="12dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/text2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="40sp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:elevation="0dp"
        android:text="@string/button2"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="40sp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:elevation="0dp"
        android:text="@string/button3"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="40sp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:elevation="0dp"
        android:text="@string/button4"
        app:layout_constraintStart_toEndOf="@+id/text4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="40sp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:elevation="0dp"
        android:text="@string/button5"
        app:layout_constraintStart_toEndOf="@+id/text5"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/answer3"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/answer2" />

    <TextView
        android:id="@+id/answer4"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/answer4"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/answer3" />

    <TextView
        android:id="@+id/answer5"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/answer5"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/answer4" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/answer2"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>